# FLOF

./: .gitignore  pyproject.toml
flof_matrix/: __init__.py
flof_matrix/config/: config_manager.py  flof_base.toml  toggle_registry.py
flof_matrix/config/profiles/: profile_backtest.toml  profile_futures.toml
flof_matrix/core/: data_types.py  event_bus.py  ring_buffer.py  types.py
flof_matrix/database/: trade_logger.py
flof_matrix/docs/: LEARNINGS.md  performance_overview.md
flof_matrix/docs/original_design/: FLOF_Matrix_Advanced_Capabilities_Epistemic_Engine_v3.3.docx  FLOF_Matrix_Confluence_Grading_Rubric_v2.docx  FLOF_Matrix_Confluence_Grading_Rubric_v3.docx  FLOF_Matrix_Project_Scaffolding_v4.0.docx  (+15 more)
flof_matrix/execution/: execution_manager.py  trade_manager.py
flof_matrix/nautilus/: backtest_runner.py  fill_engine.py  flof_actor.py  flof_strategy.py  nautilus_strategy.py
flof_matrix/order_flow/: order_flow_engine.py  volume_profile_engine.py
flof_matrix/risk/: portfolio_manager.py  risk_overlord.py
flof_matrix/server/: app.py  state.py  ws.py
flof_matrix/strategy/: confluence_scorer.py  event_calendar.py  predator_state_machine.py  velez_ma_module.py
flof_matrix/structure/: htf_structure_mapper.py  poi_mapper.py  session_profiler.py  sudden_move.py
flof_matrix/tests/: conftest.py
scripts/: analyze_results.py  analyze_shadow.py  convert_to_catalog.py  download_data.py  performance_audit.py  plot_results.py  run_backtest.py  run_server.py  trade_autopsy.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: index.css
(+44 files in other folders)
