[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flof-matrix"
version = "0.1.0"
description = "FLOF Matrix — Fractal Liquidity & Order Flow Trading System"
requires-python = ">=3.11"
dependencies = [
    "nautilus_trader>=1.200.0",
    "numpy>=1.26.0",
    "databento>=0.40.0",
    "psycopg[binary]>=3.1.0",
    "sqlalchemy>=2.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
    "pytz>=2024.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.90.0",
    "matplotlib>=3.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["flof_matrix*"]

[tool.pytest.ini_options]
testpaths = ["flof_matrix/tests"]
asyncio_mode = "auto"
markers = [
    "benchmark: marks tests as benchmark tests",
    "integration: marks tests as integration tests",
]
